--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "October 07, 2023" "ugrep 4.3.0" "User Commands"
+.TH UGREP "1" "October 18, 2023" "ugrep 4.3.1" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -228,9 +228,12 @@ Use COLORS to mark up text.  COLORS is a colon\-separated list of
 one or more parameters `sl=' (selected line), `cx=' (context line),
 `mt=' (matched text), `ms=' (match selected), `mc=' (match
 context), `fn=' (file name), `ln=' (line number), `cn=' (column
-number), `bn=' (byte offset), `se=' (separator).  Parameter values
-are ANSI SGR color codes or `k' (black), `r' (red), `g' (green),
-`y' (yellow), `b' (blue), `m' (magenta), `c' (cyan), `w' (white).
+number), `bn=' (byte offset), `se=' (separator), `qp=' (TUI
+prompt), `qe=' (TUI errors), `qr=' (TUI regex), `qm=' (TUI regex
+meta characters), `ql=' (TUI regex lists and literals), `qb=' (TUI
+regex braces).  Parameter values are ANSI SGR color codes or `k'
+(black), `r' (red), `g' (green), `y' (yellow), `b' (blue), `m'
+(magenta), `c' (cyan), `w' (white), or leave empty for no color.
 Upper case specifies background colors.  A `+' qualifies a color as
 bright.  A foreground and a background color may be combined with
 font properties `n' (normal), `f' (faint), `h' (highlight), `i'
@@ -594,7 +597,8 @@ search path is read, making searches potentially more expensive.
 \fB\-m\fR [\fIMIN\fR,][\fIMAX\fR], \fB\-\-min\-count\fR=\fIMIN\fR, \fB\-\-max\-count\fR=\fIMAX\fR
 Require MIN matches, stop after MAX matches when specified.  Output
 MIN to MAX matches.  For example, \fB\-m\fR1 outputs the first match and
-\fB\-c\fRm1, (with a comma) counts non\-zero matches.  See also option \fB\-K\fR.
+\fB\-c\fRm1, (with a comma) counts nonzero matches.  If \fB\-u\fR is specified,
+each individual match counts.  See also option \fB\-K\fR.
 .TP
 \fB\-\-match\fR
 Match all input.  Same as specifying an empty pattern to search.
@@ -1049,9 +1053,11 @@ supported.
 May be used to specify ANSI SGR parameters to highlight matches and other
 attributes when option \fB--color\fR is used.  Its value is a colon-separated
 list of ANSI SGR parameters that defaults to
-\fBcx=33:mt=1;31:fn=1;35:ln=1;32:cn=1;32:bn=1;32:se=36\fR.  The \fBmt=\fR,
-\fBms=\fR, and \fBmc=\fR capabilities of \fBGREP_COLORS\fR take priority over
-\fBGREP_COLOR\fR.  Option \fB--colors\fR takes priority over \fBGREP_COLORS\fR.
+\fBcx=33:mt=1;31:fn=1;35:ln=1;32:cn=1;32:bn=1;32:se=36\fR with additional
+parameters for TUI colors \fB:qp=1;32:qe=1;37;41:qm=1;32:ql=36:qb=1;35\fR.
+The \fBmt=\fR, \fBms=\fR, and \fBmc=\fR capabilities of \fBGREP_COLORS\fR take
+priority over \fBGREP_COLOR\fR.  Option \fB--colors\fR takes priority over
+\fBGREP_COLORS\fR.
 .SH GREP_COLORS
 Colors are specified as string of colon-separated ANSI SGR parameters of the
 form `what=substring', where `substring' is a semicolon-separated list of ANSI
@@ -1061,35 +1067,47 @@ SGR codes or `k' (black), `r' (red), `g' (green), `y' (yellow), `b' (blue), `m'
 combined with one or more font properties `n' (normal), `f' (faint), `h'
 (highlight), `i' (invert), `u' (underline).  Substrings may be specified for:
 .IP \fBsl=\fR
-SGR substring for selected lines.
+selected lines.
 .IP \fBcx=\fR
-SGR substring for context lines.
+context lines.
 .IP \fBrv\fR
-Swaps the \fBsl=\fR and \fBcx=\fR capabilities when \fB-v\fR is specified.
+swaps the \fBsl=\fR and \fBcx=\fR capabilities when \fB-v\fR is specified.
 .IP \fBmt=\fR
-SGR substring for matching text in any matching line.
+matching text in any matching line.
 .IP \fBms=\fR
-SGR substring for matching text in a selected line.  The substring \fBmt=\fR by
+matching text in a selected line.  The substring \fBmt=\fR by
 default.
 .IP \fBmc=\fR
-SGR substring for matching text in a context line.  The substring \fBmt=\fR by
+matching text in a context line.  The substring \fBmt=\fR by
 default.
 .IP \fBfn=\fR
-SGR substring for filenames.
+filenames.
 .IP \fBln=\fR
-SGR substring for line numbers.
+line numbers.
 .IP \fBcn=\fR
-SGR substring for column numbers.
+column numbers.
 .IP \fBbn=\fR
-SGR substring for byte offsets.
+byte offsets.
 .IP \fBse=\fR
-SGR substring for separators.
+separators.
 .IP \fBrv\fR
 a Boolean parameter, switches \fBsl=\fR and \fBcx=\fR with option \fB-v\fR.
 .IP \fBhl\fR
 a Boolean parameter, enables filename hyperlinks (\fB\\33]8;;link\fR).
 .IP \fBne\fR
 a Boolean parameter, disables ``erase in line'' \fB\\33[K\fR.
+.IP \fBqp=\fR
+TUI prompt.
+.IP \fBqe=\fR
+TUI errors.
+.IP \fBqr=\fR
+TUI regex.
+.IP \fBqm=\fR
+TUI regex meta characters.
+.IP \fBql=\fR
+TUI regex lists and literals.
+.IP \fBqb=\fR
+TUI regex braces.
 .SH FORMAT
 Option \fB--format\fR=\fIFORMAT\fR specifies an output format for file matches.
 Fields may be used in \fIFORMAT\fR, which expand into the following values:
