Add Zig support

--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -791,7 +791,7 @@ file types can be (where \fB\-t\fRlist displays a detailed list):
 `scala', `scheme', `shell', `Shell', `smalltalk', `sql', `svg',
 `swift', `tcl', `tex', `text', `tiff', `Tiff', `tt',
 `typescript', `verilog', `vhdl', `vim', `xml', `Xml', `yacc',
-`yaml'.
+`yaml', 'zig'.
 .TP
 \fB\-\-tabs\fR[=\fINUM\fR]
 Set the tab size to NUM to expand tabs for option \fB\-k\fR.  The value of
