quicker TUI blanking when search restarts
1. Blanking is not immediate, because it causes flickering. But the TUI screen update delay is too long when the search results come in slowly. This change fixes that.
2. continue TUI file queueing, but more slowly after a large number was queued (64K to half a million files), to indicate that more files are still searchable and are queued (while not overusing the CPU to do so)

--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "November 03, 2023" "ugrep 4.3.2" "User Commands"
+.TH UGREP "1" "November 06, 2023" "ugrep 4.3.2" "User Commands"
 .SH NAME
 \fBugrep\fR, \fBug\fR -- file pattern searcher
 .SH SYNOPSIS
@@ -791,7 +791,7 @@ file types can be (where \fB\-t\fRlist displays a detailed list):
 `scala', `scheme', `shell', `Shell', `smalltalk', `sql', `svg',
 `swift', `tcl', `tex', `text', `tiff', `Tiff', `tt',
 `typescript', `verilog', `vhdl', `vim', `xml', `Xml', `yacc',
-`yaml', 'zig'.
+`yaml', `zig'.
 .TP
 \fB\-\-tabs\fR[=\fINUM\fR]
 Set the tab size to NUM to expand tabs for option \fB\-k\fR.  The value of
