--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -529,9 +529,9 @@ only.  Note that \fB\-\-exclude\-fs\fR mounts take priority over
 \fB\-\-index\fR
 Perform index\-based recursive search.  This option assumes, but
 does not require, that files are indexed with ugrep\-indexer.  This
-option accellerates recursive searching by skipping non\-matching
+option accelerates recursive searching by skipping non\-matching
 files, archives and compressed files when indexed.  Significant
-accelleration may be achieved on cold (not file\-cached) and large
+acceleration may be achieved on cold (not file\-cached) and large
 file systems, or any file system that is slow to search.  Note that
 the start\-up time to search is increased, which may be significant
 when complex search patterns are specified that contain large
